--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ ayuda de imágenes, videos, archivos PDF.
 <div class="container-sub">
 <div class="conten-sub">
   
-    <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/index.html.encabezado.html">
+    <form action="index.html.encabezado.html">
         <button>Entrar</button>
     </form>
 
