--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ ayuda de imágenes, videos, archivos PDF.
 <div class="container-sub">
 <div class="conten-sub">
   
-    <form action="index.html.encabezado.html">
+    <form action="encabezado.html">
         <button>Entrar</button>
     </form>
 
