--- a/Básico.html
+++ b/Básico.html
@@ -21,10 +21,10 @@
          <div class="Niveles">
              <div class="carta">
             <h3>VOCABULARIO/VOCABULARY.</h3>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Alfabeto.html" >
+            <form action="Alfabeto.html" >
                 <button>Alfabeto, Contando números, Colores, Países, Nacionalidades.</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Adverbios%20de%20frecuencia%20(Adverbs%20of%20Frequency),%20Palabras%20de%20pregunta%20(Question%20words)..html" >
+            <form action="Adverbios.html" >
                 <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words).</button>
             </form>
 
