--- a/Básico.html
+++ b/Básico.html
@@ -33,13 +33,14 @@
 
 
 
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Estaciones%20del%20a%C3%B1o%20(Seasons),%20D%C3%ADas%20de%20la%20semana%20(Days%20of%20the%20week),%20Meses%20del%20a%C3%B1o%20(Months%20of%20the%20year).html" >
+            <form action="Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html.html" >
                 <button>Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Pronombres%20de%20sujetos%20(Subject%20pronouns),%20Pronombres%20de%20objetos%20(Objetc%20pronouns),%20Adjetivos%20posesivos%20(Possessive%20Adjectives),%20Pronombres%20posesivos%20(Possessive%20pronouns)..html" >
+            <form action="Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns)..html 
+" >
                 <button>Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns).</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/El%20articulo%20indefinido%20(The%20indefinite%20article),%20Sustantivos%20plurales%20(Plural%20nouns)..html" >
+            <form action="El articulo indefinido (The indefinite article), Sustantivos plurales (Plural nouns)..html	" >
                 <button>El articulo indefinido (The indefinite article), Sustantivos plurales (Plural nouns).</button>
             </form>
 
