--- a/Intermedio.html
+++ b/Intermedio.html
@@ -21,10 +21,11 @@
          <div class="Niveles">
              <div class="carta">
             <h3>VOCABULARIO/VOCABULARY.</h3>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Miembros%20de%20la%20familia%20(Family%20Members),%20Trabajos%20(Jobs),%20Partes%20del%20cuerpo%20(Humano%20human%20body%20parts).html" >
+            <form action="Miembros de la familia (Family Members), Trabajos (Jobs), Partes del cuerpo (Humano human body parts).html" >
                 <button>Miembros de la familia (Family Members), Trabajos (Jobs), Partes del cuerpo humano (Human body parts)</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Classroom%20Objects,%20Rooms%20of%20the%20House.html" >
+            <form action="Classroom Objects, Rooms of the House.html
+" >
                 <button> Objetos de clase (Classroom Objects), Habitaciones de la casa (Rooms of the House).</button>
             </form>
 
@@ -33,16 +34,18 @@
 
 
 
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Verbos.html" >
+            <form action="Verbos.html" >
                 <button>Verbos (Verbs), Presente simple (Present simple), Presente continuo (Present continuous), Pasado simple (Past simple).</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Pronombres%20de%20sujetos%20(Subject%20pronouns),%20Pronombres%20de%20objetos%20(Objetc%20pronouns),%20Adjetivos%20posesivos%20(Possessive%20Adjectives),%20Pronombres%20posesivos%20(Possessive%20pronouns)..html" >
+            <form action="Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns)..html
+" >
                 <button>Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns).</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Presente%20perfecto%20simple%20(Present%20perfect%20simple).html" >
+            <form action="Presente perfecto simple (Present perfect simple).html
+" >
                 <button>Presente perfecto simple (Present perfect simple), Han estado y se Han ido (Have been and Have gone).</button>
             </form>
-            <form action="file:///C:/Users/FDR/Pictures/HTML%20PAGE/Mi%20primera%20pagina%20web/Futur%20simple%20(Future%20simple).html" >
+            <form action="Futur simple (Future simple).html" >
                 <button>Futuro simple (Future simple), Estar yendo a (Be going to).</button>
             </form>
 
