--- a/Básico.html
+++ b/Básico.html
@@ -34,7 +34,7 @@
 
 
             <form action="Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html.html" >
-                <button>Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).</button>
+                <button>Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html</button>
             </form>
             <form action="Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns)..html 
 " >
