--- a/Básico.html
+++ b/Básico.html
@@ -33,14 +33,14 @@
 
 
 
-            <form action="Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html.html" >
+            <form action="Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html." >
                 <button>Estaciones del año (Seasons), Días de la semana (Days of the week), Meses del año (Months of the year).html</button>
             </form>
             <form action="Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns)..html 
 " >
                 <button>Pronombres de sujetos (Subject pronouns), Pronombres de objetos (Objetc pronouns), Adjetivos posesivos (Possessive Adjectives), Pronombres posesivos (Possessive pronouns).</button>
             </form>
-            <form action="El articulo indefinido (The indefinite article), Sustantivos plurales (Plural nouns)..html	" >
+            <form action="El articulo indefinido (The indefinite article), Sustantivos plurales (Plural nouns)..html" >
                 <button>El articulo indefinido (The indefinite article), Sustantivos plurales (Plural nouns).</button>
             </form>
 
