--- a/Básico.html
+++ b/Básico.html
@@ -24,8 +24,8 @@
             <form action="Alfabeto.html" >
                 <button>Alfabeto, Contando números, Colores, Países, Nacionalidades.</button>
             </form>
-            <form action="Adverbios..html" >
-                <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words)</button>
+            <form action="Adverbios.html" >
+                <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words)..html</button>
             </form>
 
 
