--- a/Intermedio.html
+++ b/Intermedio.html
@@ -22,7 +22,7 @@
              <div class="carta">
             <h3>VOCABULARIO/VOCABULARY.</h3>
             <form action="Miembros de la familia (Family Members), Trabajos (Jobs), Partes del cuerpo (Humano human body parts).html" >
-                <button>Miembros de la familia (Family Members), Trabajos (Jobs), Partes del cuerpo humano (Human body parts)</button>
+                <button>Miembros de la familia (Family Members), Trabajos (Jobs), Partes del cuerpo humano (Human body parts).</button>
             </form>
             <form action="Classroom Objects, Rooms of the House.html
 " >
