--- a/Básico.html
+++ b/Básico.html
@@ -24,7 +24,7 @@
             <form action="Alfabeto.html" >
                 <button>Alfabeto, Contando números, Colores, Países, Nacionalidades.</button>
             </form>
-            <form action="Adverbios..html" >
+            <form action="Adverbios.html" >
                 <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words).html</button>
             </form>
 
