--- a/Básico.html
+++ b/Básico.html
@@ -25,8 +25,7 @@
                 <button>Alfabeto, Contando números, Colores, Países, Nacionalidades.</button>
             </form>
             <form action="Adverbios..html" >
-                <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words)..html
-</button>
+                <button>Adverbios de frecuencia (Adverbs of Frequency), Palabras de pregunta (Question words).</button>
             </form>
 
 
